include_directories(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(. HTD_CLI_SRC_LIST)

list(REMOVE_ITEM HTD_CLI_SRC_LIST "main.cpp")

set(HTD_CLI_SOVERSION_INTERFACE 0)
set(HTD_CLI_SOVERSION_REVISION 0)
set(HTD_CLI_SOVERSION_AGE 0)
set(HTD_CLI_SOVERSION ${HTD_CLI_SOVERSION_INTERFACE}.${HTD_CLI_SOVERSION_REVISION}.${HTD_CLI_SOVERSION_AGE})

if (UNIX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -fvisibility=hidden -Dhtd_cli_EXPORTS")
endif (UNIX)

if (BUILD_SHARED_LIBS)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHTD_CLI_SHARED_LIBRARY")
endif (BUILD_SHARED_LIBS)

add_library(htd_cli ${HTD_CLI_SRC_LIST} ${HEADER_LIST})

set_property(TARGET htd_cli PROPERTY CXX_STANDARD 11)
set_property(TARGET htd_cli PROPERTY CXX_STANDARD_REQUIRED ON)

set_property(TARGET htd_cli PROPERTY POSITION_INDEPENDENT_CODE 1)

set_target_properties(htd_cli PROPERTIES VERSION ${HTD_CLI_SOVERSION} SOVERSION ${HTD_CLI_SOVERSION_INTERFACE})

set_target_properties(htd_cli
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

install(TARGETS htd_cli DESTINATION lib)
install(DIRECTORY "${PROJECT_SOURCE_DIR}/include/htd_cli" DESTINATION include)
